Fix tests that were using concurrency primitives with CC
It wasn't really working propertly most of the time, because the
instances weren't shared across tasks.